Fasto/fasto/bin/Parser.fsyacc.output
Output file describing compiled parser placed in bin/Parser.fs and bin/Parser.fsi
------------------------
states = 
state 0:
  items:
    _startProg ->  . Prog

  actions:
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   shift 4
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   error
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Prog: 1
    goto FunDecs: 2

state 1:
  items:
    _startProg -> Prog . 

  actions:
    action 'LPAR' (noprec):   accept
    action 'RPAR' (noprec):   accept
    action 'LBRACKET' (noprec):   accept
    action 'RBRACKET' (noprec):   accept
    action 'LCURLY' (noprec):   accept
    action 'RCURLY' (noprec):   accept
    action 'FUN' (noprec):   accept
    action 'FN' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'SEMICOLON' (noprec):   accept
    action 'READ' (noprec):   accept
    action 'WRITE' (noprec):   accept
    action 'DEQ' (noprec):   accept
    action 'LTH' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'OP' (noprec):   accept
    action 'MAP' (noprec):   accept
    action 'REDUCE' (noprec):   accept
    action 'IOTA' (noprec):   accept
    action 'ARROW' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'LESS' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'CHAR' (noprec):   accept
    action 'BOOL' (noprec):   accept
    action 'IF' (noprec):   accept
    action 'THEN' (noprec):   accept
    action 'ELSE' (noprec):   accept
    action 'LET' (noprec):   accept
    action 'IN' (noprec):   accept
    action 'EOF' (noprec):   accept
    action 'ID' (noprec):   accept
    action 'STRINGLIT' (noprec):   accept
    action 'CHARLIT' (noprec):   accept
    action 'NUM' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    Prog -> FunDecs . 'EOF'

  actions:
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   shift 3
    action 'ID' (noprec):   error
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 3:
  items:
    Prog -> FunDecs 'EOF' . 

  actions:
    action 'LPAR' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'RPAR' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'LBRACKET' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'RBRACKET' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'LCURLY' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'RCURLY' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'FUN' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'FN' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'COMMA' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'SEMICOLON' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'READ' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'WRITE' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'DEQ' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'LTH' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'EQ' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'OP' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'MAP' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'REDUCE' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'IOTA' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'ARROW' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'PLUS' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'MINUS' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'LESS' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'INT' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'CHAR' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'BOOL' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'IF' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'THEN' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'ELSE' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'LET' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'IN' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'EOF' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'ID' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'STRINGLIT' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'CHARLIT' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'NUM' (noprec):   reduce Prog --> FunDecs 'EOF'
    action 'error' (noprec):   reduce Prog --> FunDecs 'EOF'
    action '#' (noprec):   reduce Prog --> FunDecs 'EOF'
    action '$$' (noprec):   reduce Prog --> FunDecs 'EOF'

  immediate action:   reduce Prog --> FunDecs 'EOF'
 gotos:

state 4:
  items:
    FunDecs -> 'FUN' . Fun FunDecs
    FunDecs -> 'FUN' . Fun

  actions:
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'LBRACKET' (noprec):   shift 20
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   shift 17
    action 'CHAR' (noprec):   shift 18
    action 'BOOL' (noprec):   shift 19
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   error
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Fun: 5
    goto Type: 7

state 5:
  items:
    FunDecs -> 'FUN' Fun . FunDecs
    FunDecs -> 'FUN' Fun . 

  actions:
    action 'LPAR' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'RPAR' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'LBRACKET' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'RBRACKET' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'LCURLY' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'RCURLY' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'FUN' (noprec):   shift 4
    action 'FN' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'COMMA' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'SEMICOLON' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'READ' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'WRITE' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'DEQ' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'LTH' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'EQ' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'OP' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'MAP' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'REDUCE' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'IOTA' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'ARROW' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'PLUS' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'MINUS' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'LESS' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'INT' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'CHAR' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'BOOL' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'IF' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'THEN' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'ELSE' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'LET' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'IN' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'EOF' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'ID' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'STRINGLIT' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'CHARLIT' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'NUM' (noprec):   reduce FunDecs --> 'FUN' Fun
    action 'error' (noprec):   reduce FunDecs --> 'FUN' Fun
    action '#' (noprec):   reduce FunDecs --> 'FUN' Fun
    action '$$' (noprec):   reduce FunDecs --> 'FUN' Fun

  immediate action: <none>
 gotos:
    goto FunDecs: 6

state 6:
  items:
    FunDecs -> 'FUN' Fun FunDecs . 

  actions:
    action 'LPAR' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'RPAR' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'LBRACKET' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'RBRACKET' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'LCURLY' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'RCURLY' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'FUN' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'FN' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'COMMA' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'SEMICOLON' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'READ' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'WRITE' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'DEQ' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'LTH' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'EQ' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'OP' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'MAP' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'REDUCE' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'IOTA' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'ARROW' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'PLUS' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'MINUS' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'LESS' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'INT' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'CHAR' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'BOOL' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'IF' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'THEN' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'ELSE' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'LET' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'IN' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'EOF' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'ID' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'STRINGLIT' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'CHARLIT' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'NUM' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action 'error' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action '#' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs
    action '$$' (noprec):   reduce FunDecs --> 'FUN' Fun FunDecs

  immediate action:   reduce FunDecs --> 'FUN' Fun FunDecs
 gotos:

state 7:
  items:
    Fun -> Type . 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    Fun -> Type . 'ID' 'LPAR' 'RPAR' 'EQ' Exp

  actions:
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   shift 8
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 8:
  items:
    Fun -> Type 'ID' . 'LPAR' Params 'RPAR' 'EQ' Exp
    Fun -> Type 'ID' . 'LPAR' 'RPAR' 'EQ' Exp

  actions:
    action 'LPAR' (noprec):   shift 9
    action 'RPAR' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   error
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 9:
  items:
    Fun -> Type 'ID' 'LPAR' . Params 'RPAR' 'EQ' Exp
    Fun -> Type 'ID' 'LPAR' . 'RPAR' 'EQ' Exp

  actions:
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   shift 14
    action 'LBRACKET' (noprec):   shift 20
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   shift 17
    action 'CHAR' (noprec):   shift 18
    action 'BOOL' (noprec):   shift 19
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   error
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Type: 23
    goto Params: 10

state 10:
  items:
    Fun -> Type 'ID' 'LPAR' Params . 'RPAR' 'EQ' Exp

  actions:
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   shift 11
    action 'LBRACKET' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   error
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 11:
  items:
    Fun -> Type 'ID' 'LPAR' Params 'RPAR' . 'EQ' Exp

  actions:
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   error
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   error
    action 'WRITE' (noprec):   error
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   shift 12
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   error
    action 'REDUCE' (noprec):   error
    action 'IOTA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   error
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   error
    action 'STRINGLIT' (noprec):   error
    action 'CHARLIT' (noprec):   error
    action 'NUM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 12:
  items:
    Fun -> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' . Exp

  actions:
    action 'LPAR' (noprec):   shift 93
    action 'RPAR' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LCURLY' (noprec):   shift 32
    action 'RCURLY' (noprec):   error
    action 'FUN' (noprec):   error
    action 'FN' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'SEMICOLON' (noprec):   error
    action 'READ' (noprec):   shift 67
    action 'WRITE' (noprec):   shift 71
    action 'DEQ' (noprec):   error
    action 'LTH' (noprec):   error
    action 'EQ' (noprec):   error
    action 'OP' (noprec):   error
    action 'MAP' (noprec):   shift 77
    action 'REDUCE' (noprec):   shift 82
    action 'IOTA' (noprec):   shift 74
    action 'ARROW' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'LESS' (noprec):   error
    action 'INT' (noprec):   error
    action 'CHAR' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'IF' (noprec):   shift 60
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'LET' (noprec):   shift 95
    action 'IN' (noprec):   error
    action 'EOF' (noprec):   error
    action 'ID' (noprec):   shift 30
    action 'STRINGLIT' (noprec):   shift 31
    action 'CHARLIT' (noprec):   shift 29
    action 'NUM' (noprec):   shift 28
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Exp: 13

state 13:
  items:
    Fun -> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp . 
    Exp -> Exp . 'PLUS' Exp
    Exp -> Exp . 'MINUS' Exp
    Exp -> Exp . 'DEQ' Exp
    Exp -> Exp . 'LTH' Exp

  actions:
    action 'LPAR' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'RPAR' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'LBRACKET' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'RBRACKET' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'LCURLY' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'RCURLY' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'FUN' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'FN' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'COMMA' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'SEMICOLON' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'READ' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'WRITE' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'DEQ' (explicit left 9999):   shift 58
    action 'LTH' (explicit left 9999):   shift 59
    action 'EQ' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'OP' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'MAP' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'REDUCE' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'IOTA' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'ARROW' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'PLUS' (explicit left 10000):   shift 56
    action 'MINUS' (explicit left 10000):   shift 57
    action 'LESS' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'INT' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'CHAR' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'BOOL' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'IF' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'THEN' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'ELSE' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'LET' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'IN' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'EOF' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'ID' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'STRINGLIT' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'CHARLIT' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'NUM' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action 'error' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action '#' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp
    action '$$' (noprec):   reduce Fun --> Type 'ID' 'LPAR' Params 'RPAR' 'EQ' Exp

  immediate action: <none>
 gotos:

state 14:
  items:
    Fun -> Type 'ID' 'LPAR' 'RPAR' . 'EQ' Exp
